[package]
name = "belt"
version = "0.2.0"
authors = ["Rollie Ma <rollie@rollie.dev>"]
edition = "2021"
publish = false
description = "Know your time from a list of selected time zones"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.24"
chrono-tz = "0.6.3"
clap = { version = "4.1.13", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
dateparser = { path = "../dateparser" }
directories = "^2.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }

[dev-dependencies]
rand = "0.8.3"
regex = "1.5.4"
