[package]
name = "belt"
version = "0.2.0"
authors = ["Rollie Ma <rollie@rollie.dev>"]
edition = "2021"
publish = false
description = "Know your time from a list of selected time zones"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
confy = "0.5.1"
dateparser = { path = "../dateparser" }
directories = "5.0.1"
prettytable-rs = "0.10.0"
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
