[package]
name = "dateparser"
version = "0.2.0"
authors = ["Rollie Ma <rollie@rollie.dev>"]
description = "Parse dates in string formats that are commonly used"
readme = "README.md"
homepage = "https://github.com/waltzofpearls/dateparser"
repository = "https://github.com/waltzofpearls/dateparser"
keywords = ["date", "time", "datetime", "parser", "parse"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
chrono-tz = "0.8.4"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
