[package]
name = "dateparser"
version = "0.2.1"
authors = ["Rollie Ma <rollie@rollie.dev>"]
description = "Parse dates in string formats that are commonly used"
readme = "README.md"
homepage = "https://github.com/waltzofpearls/dateparser"
repository = "https://github.com/waltzofpearls/dateparser"
keywords = ["date", "time", "datetime", "parser", "parse"]
license = "MIT"
edition = "2021"

[features]
wasm = ["dep:js-regexp"]


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies]
js-regexp = {version="0.2",optional=true}

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
regex = "1.10.2"
js-regexp = {version="0.2",optional=true}

[dev-dependencies]
chrono-tz = "0.8.4"
# default features include rayon, which fails on wasm targets
criterion = { version = "0.5.1", features = ["html_reports"], default-features=false }

[[bench]]
name = "parse"
harness = false
